[package]
name = "serde_cbor"
version = "0.11.2"
authors = [
    "Pyfisch <pyfisch@posteo.org>",
    "Steven Fackler <sfackler@gmail.com>"]
repository = "https://github.com/pyfisch/cbor"
readme = "README.md"
license = "MIT/Apache-2.0"
description = "CBOR support for serde."
keywords = ["serde", "cbor", "serialization", "no_std"]
categories = ["encoding"]
edition = "2018"

[badges]
travis-ci = { repository = "pyfisch/cbor" }
maintenance = { status = "as-is" }

[dependencies]
half = { git = "https://github.com/fortanix/half-rs.git", branch = "fortanixvme" }
serde = { git = "https://github.com/fortanix/serde.git", branch = "master", default-features = false }
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
dep_alloc = { version = "1.0.0", optional = true, package = "rustc-std-workspace-alloc" }
compiler_builtins = { version = "0.1.0", optional = true }

[dev-dependencies]
serde_derive = { version = "1.0.14", default-features = false }

[features]
default = ["std"]
# Uses `alloc` library and adds support for vector functions with
# `no_std`.
alloc = ["dep_alloc", "serde/alloc"]
std = ["serde/std" ]
rustc-dep-of-std = ["core", "dep_alloc", "compiler_builtins/rustc-dep-of-std", "serde/rustc-dep-of-std", "half/rustc-dep-of-std"]
unsealed_read_write = []
tags = []
